# physicalraytracing

./: .gitmodules  CMakeLists.txt  README.txt  compile_commands.json  runmefirst.sh
src/: main.cpp
src/shaders/: trifragment.glsl
src/util/: GLutil.cpp  GLutil.h  logger.cpp  logger.h
